# helloworld

./: .gitignore  CMakeLists.txt  HotkeyManager.cpp  HotkeyManager.h  all.py  conanfile.txt  config.json  main.cpp
include/: ConfigManager.h  EventProcessor.h  HotkeyHandler.h  HotkeyManager.h  HotkeyRegistry.h  IInputHandler.h  InputProcessor.h  InputState.h  InputStateManager.h  InputSystem.h  InputTypes.h  ModifierUtils.h  MouseEventProcessor.h  MouseHandler.h  SDL2EventGenerator.h  SDL3EventGenerator.h  SDLEventGenerator.h  SDLInputSystem.h  SDLManager.h  StringUtils.h  key.h  mousebutton.h
src/: ConfigManager.cpp  EventProcessor.cpp  HotkeyHandler.cpp  HotkeyManager.cpp  HotkeyRegistry.cpp  InputProcessor.cpp  InputState.cpp  InputStateManager.cpp  ModifierUtils.cpp  MouseEventProcessor.cpp  MouseHandler.cpp  SDL2EventGenerator.cpp  SDL3EventGenerator.cpp  SDLEventGenerator.cpp  SDLInputSystem.cpp
tests/: CMakeLists.txt  test_hotkey_handler.cpp  test_input_processor.cpp  test_input_state_manager.cpp  test_mouse_handler.cpp  tests.cpp
